tests/parser/var_err12.mtp
(* variable section start *)

(*missing right parenthesis*)
var test: array(20 of integer;

begin

end
.
